# customer_complaints

./: Dockerfile  INSTALL.md  README.md  alembic.ini  check_openai.py  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 277152aa52db_.py
envs/: app.env.template  db.env.template
postman_collections/: New Environment.postman_environment.json  customers_complaints.postman_collection.json
scripts/: poetry.sh
src/: config.py  error_handlers.py  main.py  routers.py
src/complaints/: crud.py  handlers.py  models.py  schemas.py  services.py
src/core/: crud.py  enums.py  exceptions.py  models.py  types.py
src/db/: all_models.py  helper.py
